--- a/JavaScriptProgramming_FullCourse/3. Build a Blackjack game/14. Display the message/index.css
+++ b/JavaScriptProgramming_FullCourse/3. Build a Blackjack game/14. Display the message/index.css
@@ -23,6 +23,6 @@ button {
     padding-top: 5px;
     padding-bottom: 5px;
     font-weight: bold;
-    border: none;
+    /* border: none; */
     border-radius: 2px;
 }
