--- a/JavaScriptProgramming_FullCourse/5. Build a Chrome Extension/03. Style the button and input tag/index.css
+++ b/JavaScriptProgramming_FullCourse/5. Build a Chrome Extension/03. Style the button and input tag/index.css
@@ -14,9 +14,23 @@ green color -> #5f9341
 
 
 input {
-    
+    width: 100%;
+    height: 40px;
+    border: 1px solid #5f9341;
+    padding: 10px;
+    font-size: 16px;
+    outline: none;
+    margin-bottom: 10px;
+    box-sizing: border-box;
 }
 
 button {
-    
+    padding: 10px 20px;
+    border: none;
+    background-color: #5f9341;
+    font-weight: bold;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    outline: none;
 }
